Stackgres examples update

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,6 +4,7 @@ name: infra
 services:
   minio:
     image: quay.io/minio/minio:RELEASE.2025-01-20T14-49-07Z
+    # container_name: minio
     command: server /data --console-address ":9001"
     restart: unless-stopped
     ports:
@@ -19,3 +20,28 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+  gitea:
+    image: docker.io/gitea/gitea:1.23.4
+    # container_name: gitea
+    environment:
+      - USER_UID=1000
+      - USER_GID=1000
+    restart: unless-stopped
+    volumes:
+      - ~/gitea:/data
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    ports:
+      - "3000:3000"
+      - "222:22"
+  nginx:
+    restart: unless-stopped
+    image: nginx:1.27.4-alpine
+    ports:
+      - 80:80
+    volumes:
+      - ~/nginx/:/nginx
+      - ./files/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./files/nginx/htpasswd:/etc/nginx/.htpasswd
+
+  
