--- a/stackgres/helm/demodb-simple/Chart.yaml
+++ b/stackgres/helm/demodb-simple/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: demodb-simple
-description: My Openshift charts
+description: A simple Stackgres PostgreSQL cluster
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
