--- a/stackgres/helm/demodb-simple/templates/Secret-initialization.yml
+++ b/stackgres/helm/demodb-simple/templates/Secret-initialization.yml
@@ -1,3 +1,4 @@
+{{- if ((.Values.init).username) }}
 {{-  $createusersql := printf "CREATE USER %s with password '%s';" .Values.init.username .Values.init.password -}}
 apiVersion: v1
 data:
@@ -8,3 +9,4 @@ metadata:
   annotations:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-weight": "-5"
+{{- end }}
